spring-petclinic-canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: spring-petclinic
    app.kubernetes.io/name: spring-petclinic
    app.kubernetes.io/part-of: spring-petclinic
    app.openshift.io/runtime: java
  annotations:
    app.openshift.io/vcs-uri: 'https://github.com/siamaksade/spring-petclinic'
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-petclinic
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: spring-petclinic
    scaleDown: progressively
  strategy:
    canary:
      # analysis:
      #   templates:
      #   - templateName: canary
      #   args:
      #   - name: namespace
      #     value: rollouts-demo-prod
      #   - name: route-name
      #     value: canary-canary
      #   - name: route-url
      #     value: canary-canary-rollouts-demo-prod.${SUB_DOMAIN}
      canaryService: spring-petclinic-canary
      stableService: spring-petclinic
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - spring-petclinic
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 60
