spring-petclinic-canary/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-petclinic-canary
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: spring-petclinic
    app.kubernetes.io/name: spring-petclinic
    app.kubernetes.io/part-of: spring-petclinic
    app.openshift.io/runtime: java
  annotations:
    app.openshift.io/vcs-uri: 'https://github.com/siamaksade/spring-petclinic'
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
  name: spring-petclinic
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  alternateBackends:
    - kind: Service
      name: spring-petclinic-canary
      weight: 0
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
